--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,5 +1,15 @@
+#root{
+   display: flex;
+   flex-direction: column;
+   height: 100vh;
+}
+
 nav{
    display: flex;
    width: 100%;
    height: 2rem;
+}
+
+section{
+   flex: 1;
 }
